--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container mt-5">
         <div class="row">
             <div class="col-md-6">
-                <h1>Bienvenue sur Mon Site</h1>
+                <h1>Mon magasin</h1>
                 <p>Un endroit où vous pouvez découvrir les dernières tendances.</p>
                 <a href="#" class="btn btn-primary">En savoir plus</a>
             </div>
